<resources>
    <string name="app_name">Attendees</string>
    <string name="app_tagline">Professor Attendance Manager</string>
    <string name="login_title">Login</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Enter</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\'t have an account? Sign up</string>
    <string name="dashboard_title">Attendees</string>
    <string name="add_new_course">Add New Course +</string>
    <string name="create_new_course">Create New Course</string>
    <string name="course_title_hint">Enter course title</string>
    <string name="create_course">Create Course</string>
    <string name="total_students">Total Students: %1$d</string>
    <string name="average_attendance">Average Attendance: %1$d%%</string>
    <string name="view_details">View Details</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="field_required">Field required</string>
    <string name="course_detail_list_prefix">List - </string>
    <string name="students_count_pill">%1$d Students</string>
    <string name="search_students_hint">Search students...</string>
    <string name="add_student_fab">Add Students +</string>
    <string name="add_student_title">Add Student</string>
    <string name="student_name_label">Name</string>
    <string name="student_name_hint">Enter student name</string>
    <string name="enrollment_no_label">Enrollment No.</string>
    <string name="enrollment_no_hint">Enter enrollment number</string>
    <string name="enrollment_prefix">ENR: </string>
    <string name="attendance_percentage_format">%1$d%%</string>
    <string name="view_lectures">View Lectures</string>
    <string name="add_lecture_fab">Add Lecture +</string>
    <string name="student_list_title">Student List</string>
    <string name="enrolled_students_pill">%1$d Enrolled Students</string>
    <string name="lecture_list_header">Lecture List</string>
    <string name="total_present_label">Total Present</string>
    <string name="venue_prefix">Venue: </string>
    <string name="time_prefix">Time: </string>
    <string name="add_lecture_title">Add Lecture</string>
    <string name="lecture_name_label">Lecture Name</string>
    <string name="lecture_name_hint">Enter lecture title</string>
    <string name="date_label">Date</string>
    <string name="select_date">Select date</string>
    <string name="time_label">Time</string>
    <string name="select_time">Select time</string>
    <string name="location_label">Location / Venue</string>
    <string name="location_hint">Enter lecture venue</string>
    <string name="create_lecture">Create Lecture</string>
    <string name="academic_session_details">ACADEMIC SESSION DETAILS</string>
    <string name="mark_attendance_title">Mark Attendance</string>
    <string name="mark_all_present">Mark All Present</string>
    <string name="save_attendance">Save Attendance</string>
    <string name="attendance_saved">Attendance saved successfully</string>
</resources>